# ot-harjoitustyo

./: .env  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: config.py  database_connection.py  init_database.py  main.py
src/calculator/: calculator_app.py  calculator_service.py
src/calculator/utils/: matrix_utils.py  row_echelon.py
src/calculator_utils/: latex_generator.py  matrix_utils.py  rational_number.py  row_echelon.py  string_conversion.py  types.py
src/entities/: history_entry.py  solution.py  user.py
src/matrix/: echelon.py  rational_number.py
src/repositories/: history_repository.py  user_repository.py
src/services/: calculator_service.py  user_service.py
src/services/calculator_utils/: matrix_utils.py  rational_number.py  row_echelon.py
src/tests/: calculator_service_test.py  echelon_test.py  rational_number_test.py  row_reduce_test.py
src/tests/calculator_utils/: rational_number_test.py  row_reduce_test.py
src/tests/repositories/: history_repository_test.py  user_repository_test.py
src/tests/services/: calculator_service_test.py  user_service_test.py
src/ui/: base_view.py  calculator_tabs.py  calculator_view.py  history_view.py  login_view.py  ui.py
