[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["82476 <82746@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
